chore(api): ensure http works
